Se agregaron clases y modelos del identity

--- a/MaestroMunicipos/appsettings.json
+++ b/MaestroMunicipos/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "\"Server=DESKTOP-8KB1J6M\\SQLEXPRESS;Database=MaestroMunicipios;Trusted_Connection=True;ConnectRetryCount=0\";\""
+  }
 }
