Se arreglo conexion

--- a/MaestroMunicipos/appsettings.json
+++ b/MaestroMunicipos/appsettings.json
@@ -7,6 +7,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "\"Server=DESKTOP-8KB1J6M\\SQLEXPRESS;Database=MaestroMunicipios;Trusted_Connection=True;ConnectRetryCount=0\";\""
+    "DefaultConnection": "Server=DESKTOP-8KB1J6M\\SQLEXPRESS;Database=MaestroMunicipios;Trusted_Connection=True;ConnectRetryCount=0"
   }
 }
